// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle GET requests 1`] = `
Object {
  "bodySource": "",
  "credentials": "omit",
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "connection": Array [
      "close",
    ],
    "host": "127.0.0.1:4030",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
    "x-request-id": Array [
      "dd9e298a40561ab945917907",
    ],
  },
  "method": "GET",
  "mode": null,
  "referrer": null,
  "remoteAddr": "::ffff:127.0.0.1",
  "stream": null,
  "url": "http://127.0.0.1:4030/",
}
`;

exports[`handle PUT requests 1`] = `
Object {
  "bodySource": "",
  "credentials": "omit",
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "connection": Array [
      "close",
    ],
    "content-length": Array [
      "0",
    ],
    "host": "127.0.0.1:4338",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
    "x-request-id": Array [
      "7742803e631a2203874f5c92",
    ],
  },
  "method": "PUT",
  "mode": null,
  "referrer": null,
  "remoteAddr": "::ffff:127.0.0.1",
  "stream": null,
  "url": "http://127.0.0.1:4338/",
}
`;
